完成 番茄闹钟 列表

--- a/src/components/Tomatoes/TomatoAction.scss
+++ b/src/components/Tomatoes/TomatoAction.scss
@@ -2,6 +2,9 @@
   .countDownWrapper,.inputWrapper{
     position: relative;
   }
+  .startTomatoButton{
+    width: 100%;
+  }
   .abort{
     position: absolute;
     right: -6px;top: -6px;
